--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,5 +6,24 @@
 	</head>
 	<body>
 		<%- include("partials/navbar.ejs") %>
+		<section class="body-container">
+			<div class="checklist-container">
+				<div class="checklist-item">
+					<input type="checkbox" class="list-checkbox">
+					<textarea class="list-text" rows="2" cols="20">Finish up this website</textarea>
+				</div>
+				<% for (let x = 0; x < Object.keys(listTextData).length; x++) {%>
+					<div class="checklist-item">
+						<input type="checkbox" class="list-checkbox">
+						<textarea class="list-text" rows="2" cols="20"><%= listTextData["item" + String(x)] %></textarea>
+					</div>
+				<% } %>
+				<div class="checklist-item new-item">
+					<form action="/new-item" method="post">
+						<button type="submit">+</button>
+					</form>
+				</div>
+			</div>
+		</section>
 	</body>
 </html>
