--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
 <div class="navbar">
-	<h1 id="navbar-title">Listit!</h1>
+	<h1><a id="navbar-title" href="/">Listit!</a></h1>
 	<ul class="navbar-list">
 		<li>Home</li>
 		<li>Work</li>
